infrastructure/bicep/networking.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.39.26.7824",
      "templateHash": "16897571920480784681"
    }
  },
  "parameters": {
    "location": {
      "type": "string"
    },
    "prefix": {
      "type": "string"
    },
    "tags": {
      "type": "object",
      "defaultValue": {}
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[format('nsg-{0}-apim', parameters('prefix'))]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAPIMManagement",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "ApiManagement",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "AllowAzureLoadBalancer",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6390",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "AllowStorageOutbound",
            "properties": {
              "priority": 110,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage"
            }
          },
          {
            "name": "AllowSqlOutbound",
            "properties": {
              "priority": 120,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Sql"
            }
          },
          {
            "name": "AllowMonitorOutbound",
            "properties": {
              "priority": 130,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "1886",
                "443"
              ],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor"
            }
          },
          {
            "name": "AllowAADOutbound",
            "properties": {
              "priority": 140,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureActiveDirectory"
            }
          },
          {
            "name": "AllowKeyVaultOutbound",
            "properties": {
              "priority": 150,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureKeyVault"
            }
          },
          {
            "name": "AllowLoadTestInbound",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "10.100.6.0/24",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[format('nsg-{0}-bastion', parameters('prefix'))]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpsFromInternet",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowGatewayManager",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowAzureLoadBalancer",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowBastionHostCommunication",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "8080",
                "5701"
              ],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "AllowRdpSshToVnet",
            "properties": {
              "priority": 100,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "3389",
                "22"
              ],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "AllowAzureCloudOutbound",
            "properties": {
              "priority": 110,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureCloud"
            }
          },
          {
            "name": "AllowBastionCommunicationOutbound",
            "properties": {
              "priority": 120,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "8080",
                "5701"
              ],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "AllowHttpOutbound",
            "properties": {
              "priority": 130,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[format('nsg-{0}-appgw-primary', parameters('prefix'))]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpsInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowGatewayManagerInbound",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "65200-65535",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowAzureLoadBalancerInbound",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[format('vnet-{0}-ai', parameters('prefix'))]",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.100.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "snet-apim",
            "properties": {
              "addressPrefix": "10.100.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-apim', parameters('prefix')))]"
              }
            }
          },
          {
            "name": "snet-appgw-primary",
            "properties": {
              "addressPrefix": "10.100.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-appgw-primary', parameters('prefix')))]"
              }
            }
          },
          {
            "name": "snet-functions",
            "properties": {
              "addressPrefix": "10.100.2.0/24",
              "delegations": [
                {
                  "name": "functions-delegation",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  }
                }
              ]
            }
          },
          {
            "name": "AzureBastionSubnet",
            "properties": {
              "addressPrefix": "10.100.3.0/26",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-bastion', parameters('prefix')))]"
              }
            }
          },
          {
            "name": "snet-jumpbox",
            "properties": {
              "addressPrefix": "10.100.4.0/24",
              "delegations": [
                {
                  "name": "aci-delegation",
                  "properties": {
                    "serviceName": "Microsoft.ContainerInstance/containerGroups"
                  }
                }
              ]
            }
          },
          {
            "name": "snet-private-endpoints",
            "properties": {
              "addressPrefix": "10.100.5.0/24",
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            }
          },
          {
            "name": "snet-loadtest",
            "properties": {
              "addressPrefix": "10.100.6.0/24",
              "privateEndpointNetworkPolicies": "Disabled"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-apim', parameters('prefix')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-appgw-primary', parameters('prefix')))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}-bastion', parameters('prefix')))]"
      ]
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', format('vnet-{0}-ai', parameters('prefix')))]"
    },
    "vnetName": {
      "type": "string",
      "value": "[format('vnet-{0}-ai', parameters('prefix'))]"
    },
    "privateEndpointSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/snet-private-endpoints', resourceId('Microsoft.Network/virtualNetworks', format('vnet-{0}-ai', parameters('prefix'))))]"
    },
    "loadTestSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/snet-loadtest', resourceId('Microsoft.Network/virtualNetworks', format('vnet-{0}-ai', parameters('prefix'))))]"
    }
  }
}
